@@ -1,3 +1,5 @@
+* Keep context in sessionStorage
+* Use existing context for get_preferences
 * Allow changes to editable tree checkboxes without first selecting the line
 
 Version 5.6.0 - 2020-05-04
